# landolt-sim

./: Cargo.toml  README.md  build.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
frontend/: .gitignore  index.html
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: ControlPanel.tsx  SimulationCanvas.tsx
landolt-wasm/: .gitignore  Cargo.toml
landolt-wasm/src/: lib.rs
src/: lib.rs  optics.rs
web/: index.html
web/src/: App.tsx  render.ts  styles.css  vite-env.d.ts
